--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 		"fluidtypo3/vhs": "^7.0",
 		"georgringer/news": "^11.4",
 		"in2code/powermail": "^12.3",
+		"lochmueller/staticfilecache": "^14.0",
 		"oussema/site": "^1.0",
 		"tpwd/ke_search": "^5.5",
 		"typo3/cms-backend": "^12.4.0",
